--- a/myapp/src/Components/Pages/Landing/LandingPage.module.css
+++ b/myapp/src/Components/Pages/Landing/LandingPage.module.css
@@ -16,6 +16,7 @@
 .landingImage{
     width:65%;  
     height: 100vh;
+   
 }
 .introDiv{
     width:35%;
@@ -25,14 +26,14 @@
 .landingNavbar{
     margin-top: 2%;
     width:100%;
-    height: 5vh;
+    height: 10vh;
     background: transparent;     
 }
 .loginBtn{
     background: rgb(204, 17, 17) !important;
     color:white !important;
     width: 75px;
-    height:3.6vh;    
+    height:32px;    
     border-radius: 4px;
     
 }
@@ -50,11 +51,39 @@
     background: rgb(204, 17, 17) !important;
     color:white !important;
     width: 115px;
-    height:4vh;    
+    height:32px;    
     border-radius: 4px;
     margin-top: 5%;
 }
 .quotesBtn{
     margin-top: 35%;
+    
+}
+.footerDiv{
+    margin-top: 25%;
+    width: 100%;
+    height: 60px;
+    display: block;
+    background: white;    
+    font-size: 14px;
+    text-align: center;
+    padding-bottom: 5px;
+   
+    
+}
+.github{
+    margin-left: 15px;
+    color:rgb(28, 26, 26);
+}
+.github:hover{
+    color:orange;
+}
+.linkedin{
+    color:rgb(28, 26, 26);
+    margin-left: 15px;
+    
+}
+.linkedin:hover{
+    color:orange;
     
 }
