--- a/myapp/src/Components/Pages/Landing/LandingPage.module.css
+++ b/myapp/src/Components/Pages/Landing/LandingPage.module.css
@@ -6,7 +6,7 @@
     left: 0px;
     color:white !important; 
 }
-.mainDiv{
+.landingMainDiv{
     width:100%;
     height: 100%;
     position: fixed;
