New image adding feature configure

--- a/myapp/src/container/FeaturePages/VisionBoard/ImagesList/ImagesList.module.css
+++ b/myapp/src/container/FeaturePages/VisionBoard/ImagesList/ImagesList.module.css
@@ -16,7 +16,8 @@
 }
 
 .visionImages{
-    height: 278px; 
+    width: 278px; 
+    height:278px;
     margin: 5px 0px 0px 5px;
     border-radius: 5px;
     background: black;
