--- a/myapp/src/container/FeaturePages/VisionBoard/SelectedImageList/style.module.css
+++ b/myapp/src/container/FeaturePages/VisionBoard/SelectedImageList/style.module.css
@@ -18,7 +18,6 @@
     position: relative;
     
 }
-
 .visionImages{
     width: 284px; 
     height:284px;
@@ -26,8 +25,7 @@
     border-radius: 5px;
        
 }
-.visionImages:hover{
-     
+.visionImages:hover .deleteBtn:hover{  
     cursor: pointer;
     transform: scale(1.02);
     transition: .5s ease;     
@@ -54,31 +52,24 @@
     margin: 0px;
     
 }
- .deleteBtn{
-    
+ .deleteBtn{  
     position: absolute;
     top: 0%;
-    left: 50%;
-    transform: translate(-50%, -20%);
+    width: 278px;
+    height: 278px;  
+    transform: translate(-48%, 3%);
     -ms-transform: translate(-50%, -50%);
-    background-color: pink;
-    margin: 65px 0 0 5px; 
-    width: 98%;
-    height: 98%;
-    color: #fff;
-    font-size: 250px;
-    font-weight: 900;
+    background-color: transparent;
+    color: transparent;
     border: none;
-    cursor: pointer;
-    border-radius: 5px;
-   
-    
+    cursor: pointer;    
 }
 .deleteBtn:hover{
     color: #fff;
-    font-size: 250px;
-    font-weight: 900;
-    opacity: .3;
+    font-size: 165px;
+    font-weight: 980;
+    opacity: 0.5;
+   
 }
 /* .deleteBtn:hover{
     
@@ -87,8 +78,6 @@
    }
      */
 
-
- 
 .continueBtn{
     background: rgb(204, 17, 17) ;
     color:white !important;
@@ -103,37 +92,3 @@
     background: white ;
     color:black !important;
 }
-/* =============================================================================== */
-/* .mediaDivOne{
-    position: relative;
-    width:50%;
-}
-.mediaOneHover{
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-    
-}
-
-.mediaDivOne:hover .image{
-    opacity: 0.4;
-}
-.mediaDivOne:hover .mediaOneHover{
-    opacity: 1;
-}
-.titleText{
-    width:400px;
-    height: 260px;
-    color: orange;
-    font-size: 16px;
-    text-align: center;
-    margin:auto; 
-    padding: 10px 5px 5px 5px;
-    background:rgba(0, 0, 0, 0.507);
-    overflow: scroll;
-} */
