--- a/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
@@ -1,34 +1,99 @@
 .dashboardMainDiv{
     width:100%;
     height: 100%;
-    position: fixed;
     text-align: center;
-    display: flex;
-}
-.demoImage{
-    width:65%;
-    height: 100vh;
-}
-.title{
-    margin-top: 35%;
-    margin-left: 40%;
-    position:absolute;
-    top: 0px;
-    left: 0px;
-    font-weight: 400;
+    display: flex;   
     
-    color:white !important; 
+    background: #f3f8ff;
 }
-.backButton{
-    width:80px;
-    font-size: 27px;
-    margin: auto;
-    padding: 2px;
-    justify-content: center;
+.sectionOneTitle{
+    color:#1E3E6B !important;
     text-decoration: none;
-    color:#007bff;
+    
 }
-.backButton:hover{
-    color:blue;
-    text-decoration:underline;
+.sectionOne{
+    width: 40%;
+    height: 100vh;
+    /* background:green !important; */
+    
+}
+.sectionTwo{
+    width: 60%;
+    height: 100vh;
+    color:white;
+    background:#f3f8ff;;
+    
+}
+.sectionOne_subContent{
+   width: 100%;
+   height: 50%;
+    background:rgb(225, 223, 223);
+    padding-top: 20px;
+}
+.sampleGoalDiv{
+    width: 250px;
+    height: 60px;
+    margin: 20px 5px 5px 30px;
+    
+    background: #fff;
+    text-align: center;
+    ;
+}
+.sectionTwo_subContent{
+    width: 100%;
+    min-height: 300px;
+    height: 30%;
+     
+    display: flex;
+    flex-flow: row;      
+    justify-content: center;
+    margin-top: 30px;
+    padding-top: 50px; 
+ }
+.inspirationDiv{
+    background:#fff;
+    width: 230px;
+    height: 150px;
+    margin:20px;
+    border-radius: 30px;
+    color:black;
+   
+}
+.userPicDiv{
+    background:#fff;
+    color:black;
+    width:230px;
+    height: 150px;
+    margin:20px;
+    border-radius: 30px;
+    display: flex;
+    flex-flow: row-reverse;
+}
+.reports{
+    background:#fff!important;
+    width:500px;
+    height: 550px;
+    margin: auto;
+    border-radius: 30px;
+    color:black;
+    padding-top: 40px;
+}
+.continueBtn{
+    background: #1479ff ;
+    color:white !important;
+    width: 120px;
+    height:38px;    
+    border-radius: 4px;
+    font-size: 15px;
+    margin-top: 5%;
+    border: none;
+}
+.continueBtn:hover{
+    background: white ;
+    color:black !important;
+    border: #1479ff solid 1px;
+}
+.userName{
+    padding-top: 40px;
+    color:#1E3E6B !important;
 }
