--- a/myapp/src/container/FeaturePages/Goals/Goals.module.css
+++ b/myapp/src/container/FeaturePages/Goals/Goals.module.css
@@ -1,130 +1,156 @@
-.goalsMainDiv{
-    width:100%;
-    height: 100%;
-    text-align: center;
-    display: flex;   
-    
-    background: #f3f8ff;
-}
 .sectionOneTitle{
     color:#1E3E6B !important;
     text-decoration: none;
     margin-top: 30px;
-    
+}
+.container{
+    width: 100%;
+    height: 100%;
+    background: peru;
+    display: flex;
+    flex-direction: column;   
 }
 .sectionOne{
-    width: 40%;
-    height: 100vh;
-    /* background:green !important; */
-    
+    width: 100%;
+    height: 200px;  
+    padding-top: 30px;
+    padding-left: 150px;
+    padding-right: 150px;
+    background: grey; 
 }
 .sectionTwo{
-    width: 60%;
-    height: 100vh;
-    color:white;
-    background:#f3f8ff;;
-    
-}
-.sectionOne_subContent{
-   width: 100%;
-   height: 50%;
-    
-    padding-top: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-.sampleGoalDiv{
-    width: 250px;
-    height: 60px;
-    margin: 20px 5px 5px 30px;
-    
-    background: #fff;
-    text-align: center;
-    ;
-}
-.sectionTwo_subContent{
     width: 100%;
-    min-height: 300px;
-    height: 30%;
-     
+    min-width: 600px;
+    height: 80%;    
+    padding-top: 30px;
+    padding-left: 200px;
+    padding-right: 200px;
+    background: #f3f8ff;
+   
+}
+.accordionMainDiv{
+    width: 100%;
+    min-width: 600px;
+    margin-bottom: 20px;
+    
+}
+.accodian{
+    width:100%;
+    min-width: 600px;
+    display:flex;
+    flex-direction: row;
+    justify-content: center; 
+    border-radius: 20px !important;      
+}
+.accordion-item{
+    width:100%;
+    min-width: 600px;
+    border-radius: 20px !important;
+    background-color: #fff;
+
+}
+.accordionBtnDiv_One{
+    display:flex;
+    padding:0px; 
+    background-image: linear-gradient(to right, #549bff, #fff) !important;
+    border-radius: 20px !important;
+}
+.accordionBtnDiv_Two{
     display: flex;
-    flex-flow: row;      
-    justify-content: center;
-    margin-top: 30px;
-    padding-top: 50px; 
+    flex-direction: row;
+    justify-content: end;
+    padding:23px;
     
- }
- .reports{
-    background:#fff!important;
-    width:500px;
-    height: 650px;
-    margin: auto;
-    border-radius: 30px;
-    color:black;
-    padding-top: 40px;
 }
- .formText{   
-   color:black;
-   display: flex;
-   justify-content: left;
-}
-.formCheckBtn{   
-    width: 80px;
-    height: 30px;
-    color:black;
-    display: block;
-    justify-content: left;
-    cursor: pointer;
-    padding: 0px;
+.accordion-button{
+    text-align: center;
+    box-shadow: none;
+    outline: none; 
+    padding:0px;
+    border-radius: 20px !important;
     
-    margin-left: 0px;
- }
-.inputField{
-    width:100%;
-    height: 30px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px; 
-    font-family: "Lato", sans-serif;
-    padding: 0 0 0 12px;
-    background: #f3f3f5;
-    margin: 25px auto 0px auto;
-    text-align: left;
-    border-radius: 4px;
-    border: 1px solid #f3f3f5;
-    box-sizing: border-box;
+} 
+.accordion-button:not(.collapsed){
+    box-shadow: none;
     outline: none;
-    resize: horizontal;
+    border-radius: 20px !important;
+    background-color: transparent !important;
+    padding:0px;
     
-}
-.inputField:focus{
-    background: #FFFFFF;
-}
-.inputFieldTextArea{
+} 
+.accordionContents{
     width:100%;
-    height: 100px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px; 
-    font-family: "Lato", sans-serif;
-    padding: 0 0 0 12px;
-    background: #f3f3f5;
-    margin: 25px auto 0px auto;
-    resize:vertical;
-    
+    height: 120px;
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px !important; 
+    background-image: linear-gradient(to right, #549bff, #fff) !important;
+    padding: 10px;
+      
+    /* background-image: linear-gradient(to right, #549bff, #fff) !important; */
+  
 }
-.continueBtn{
+.goalImage{
+    padding-left: 0px;
+     
+}
+.heading{
+    width:600px ;
+    text-align: left;
+    color:rgb(56, 56, 56) !important;
+    font-size: 20px !important;
+    font-weight: 700;
+    padding-top:30px;
+    padding-left: 15px;  
+}
+.addGoalCompBtn{
     background: #1479ff ;
     color:white !important;
-    width: 120px;
-    height:38px;    
+    width: 100px;
+    height:48px;    
     border-radius: 4px;
-    font-size: 15px;
-    
+    font-size: 16px !important;    
     border: none;
+    text-align: center !important;
+    margin-left: 10px;
+    
 }
-.continueBtn:hover{
+.addGoalCompBtn:hover{
     background: white ;
     color:black !important;
     border: #1479ff solid 1px;
+   
+}
+.addGoalDelBtn{
+    background: #1479ff ;
+    color:white !important;
+    width: 100px;
+    height:48px;    
+    border-radius: 4px;
+    font-size: 16px !important;    
+    border: none;
+    text-align: center !important;
+    margin-left: 10px; 
+}
+.addGoalDelBtn:hover{
+    background: white ;
+    color:black !important;
+    border: #1479ff solid 1px;
+   
+}
+.addGoalEditBtn{
+    background: #1479ff ;
+    color:white !important;
+    width: 100px;
+    height:48px;    
+    border-radius: 4px;
+    font-size: 16px !important;    
+    border: none;
+    text-align: center !important;  
+}
+.addGoalEditBtn:hover{
+    background: white ;
+    color:black !important;
+    border: #1479ff solid 1px;
+   
 }
