--- a/myapp/src/container/FeaturePages/Goals/Goals.module.css
+++ b/myapp/src/container/FeaturePages/Goals/Goals.module.css
@@ -1,28 +1,54 @@
 .sectionOneTitle{
     color:#1E3E6B !important;
     text-decoration: none;
-    margin-top: 30px;
+    margin-top: 45px;
+    padding-top: 30px;
 }
 .container{
     width: 100%;
     height: 100%;
-    background: peru;
     display: flex;
     flex-direction: column;   
 }
 .sectionOne{
     width: 100%;
     height: 200px;  
-    padding-top: 30px;
-    padding-left: 150px;
-    padding-right: 150px;
-    background: grey; 
+    padding-top: 20px;
+    padding-left: 200px;
+    padding-right: 200px;
+    background: #f3f8ff;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.titlediv{
+    width: 100%;
+    min-width:515px;
+}
+.createGoalBtnDiv{
+    display: flex;
+    
+}
+.createGoalBtn{
+    background: #14d2ff ;
+    color:white !important;
+    width: 60px;
+    height:20px;    
+    border-radius: 8px !important;
+    padding: 10px;   
+    margin-top:138px;
+    
+}
+.createGoalBtn:hover{
+    background: white ;
+    color:#1479ff !important;
+    border: #1479ff solid 1px;
 }
 .sectionTwo{
     width: 100%;
     min-width: 600px;
-    height: 80%;    
-    padding-top: 30px;
+    height: 100vh;    
+    padding-top: 15px;
     padding-left: 200px;
     padding-right: 200px;
     background: #f3f8ff;
@@ -52,14 +78,16 @@
 .accordionBtnDiv_One{
     display:flex;
     padding:0px; 
-    background-image: linear-gradient(to right, #549bff, #fff) !important;
+    /* background-image: linear-gradient(to right, #549bff, #fff) !important; */
     border-radius: 20px !important;
+    background: #fff;
 }
 .accordionBtnDiv_Two{
     display: flex;
     flex-direction: row;
-    justify-content: end;
-    padding:23px;
+    margin-right: 0px;
+    padding-right: 0px;
+    padding-top: 25px;
     
 }
 .accordion-button{
@@ -75,82 +103,81 @@
     outline: none;
     border-radius: 20px !important;
     background-color: transparent !important;
-    padding:0px;
+    padding-right:20px;
     
 } 
 .accordionContents{
-    width:100%;
-    height: 120px;
+    width:96%;
+    height: 116px;
     display: flex;
     flex-direction: row;
+    justify-content:left;
     border-radius: 20px !important; 
-    background-image: linear-gradient(to right, #549bff, #fff) !important;
-    padding: 10px;
+    background-image: linear-gradient(to right, #549bff,#bbd4f7, #fff) !important;
+    padding: 8px;
       
     /* background-image: linear-gradient(to right, #549bff, #fff) !important; */
   
 }
 .goalImage{
     padding-left: 0px;
+  
      
 }
 .heading{
-    width:600px ;
+    width:100%;
+    height: 80px;
     text-align: left;
     color:rgb(56, 56, 56) !important;
-    font-size: 20px !important;
+    font-size: 16px !important;
     font-weight: 700;
-    padding-top:30px;
-    padding-left: 15px;  
-}
-.addGoalCompBtn{
-    background: #1479ff ;
-    color:white !important;
-    width: 100px;
-    height:48px;    
-    border-radius: 4px;
-    font-size: 16px !important;    
-    border: none;
-    text-align: center !important;
-    margin-left: 10px;
+    padding-top: 30px;    
+    padding-bottom: 10px;
+    margin-left: 25px;
+    
     
 }
-.addGoalCompBtn:hover{
-    background: white ;
-    color:black !important;
-    border: #1479ff solid 1px;
-   
+.editIconBtns {
+    color: black !important;
+    cursor: pointer;
+   width:26px;
+   height: 26px;
+   padding: 5px 5px 5px 5px;
+   margin-left: 10px;
 }
-.addGoalDelBtn{
-    background: #1479ff ;
-    color:white !important;
-    width: 100px;
-    height:48px;    
-    border-radius: 4px;
-    font-size: 16px !important;    
-    border: none;
-    text-align: center !important;
-    margin-left: 10px; 
+.editIconBtns:hover {
+text-decoration: none;
+color: #1479FF !important;
 }
-.addGoalDelBtn:hover{
-    background: white ;
-    color:black !important;
-    border: #1479ff solid 1px;
-   
+
+.deleteIconBtns {
+    color: black !important;
+    cursor: pointer;
+   width:26px;
+   height: 26px;
+   padding: 5px 5px 5px 5px;
+   margin-left: 10px;
 }
-.addGoalEditBtn{
-    background: #1479ff ;
-    color:white !important;
-    width: 100px;
-    height:48px;    
-    border-radius: 4px;
-    font-size: 16px !important;    
-    border: none;
-    text-align: center !important;  
+.deleteIconBtns:hover {
+text-decoration: none;
+color: red !important;
 }
-.addGoalEditBtn:hover{
-    background: white ;
-    color:black !important;
-    border: #1479ff solid 1px;
-   
+.tickIconBtns {
+    color: grey !important;
+    cursor: pointer;
+   width:60px;
+   height: 36px;
+   padding: 5px 5px 5px 5px;
 }
+.tickIconBtns2 {
+    color: #2BD01D !important;
+    cursor: pointer;
+   width:60px;
+   height: 36px;
+   padding: 5px 5px 5px 5px;
+}
+
+/* .tickIconBtns:hover {
+text-decoration: none;
+color: #fff;
+} */
