--- a/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
@@ -3,97 +3,70 @@
     height: 100%;
     text-align: center;
     display: flex;   
+    background-color: pink;
+    /*background: #f3f8ff;
     
-    background: #f3f8ff;
-}
-.sectionOneTitle{
-    color:#1E3E6B !important;
-    text-decoration: none;
-    
+*/
 }
 .sectionOne{
-    width: 40%;
-    height: 100vh;
-    /* background:green !important; */
-    
-}
-.sectionTwo{
-    width: 60%;
-    height: 100vh;
-    color:white;
-    background:#f3f8ff;;
+    width: 30%;
+    height: 100%;
+    display:flex;
+    flex-direction: column;  
+    background-color: green;
     
 }
 .sectionOne_subContent{
-   width: 100%;
-   height: 50%;
-    background:rgb(225, 223, 223);
-    padding-top: 20px;
-}
-.sampleGoalDiv{
-    width: 250px;
-    height: 60px;
-    margin: 20px 5px 5px 30px;
+    width: 100%;
+    height: 80%;
+    padding: 10px;
+    margin-top: 10px;
+    overflow:auto;
     
-    background: #fff;
-    text-align: center;
-    ;
+ }
+.sectionTwo{
+    width: 70%;
+    height: 100%;
+    color:white;
+    /* background:#f3f8ff; */
+    padding:20px;
+    background-color: orange;
 }
 .sectionTwo_subContent{
     width: 100%;
-    min-height: 300px;
-    height: 30%;
-     
     display: flex;
     flex-flow: row;      
     justify-content: center;
-    margin-top: 30px;
+    margin: 30px 0 40px 0;
     padding-top: 50px; 
  }
-.inspirationDiv{
-    background:#fff;
-    width: 230px;
-    height: 150px;
-    margin:20px;
-    border-radius: 30px;
-    color:black;
-   
-}
-.userPicDiv{
-    background:#fff;
-    color:black;
-    width:230px;
-    height: 150px;
-    margin:20px;
-    border-radius: 30px;
-    display: flex;
-    flex-flow: row-reverse;
-}
 .reports{
     background:#fff!important;
-    width:500px;
+    width:100%;
+    min-width:600px;
     height: 550px;
-    margin: auto;
+    display: block;
     border-radius: 30px;
     color:black;
     padding-top: 40px;
+    box-shadow: 0 4px 4px 0 #CADFFD, 0 6px 20px 0 #CADFFD;
 }
-.continueBtn{
-    background: #1479ff ;
-    color:white !important;
-    width: 120px;
-    height:38px;    
-    border-radius: 4px;
-    font-size: 15px;
-    margin-top: 5%;
-    border: none;
+
+.rowChart{
+    width: 100%;
+    display: flex;
 }
-.continueBtn:hover{
-    background: white ;
-    color:black !important;
-    border: #1479ff solid 1px;
-}
-.userName{
+
+.goalsSection{
+    margin-top: 40px;
+    background:#fff!important;
+    width:100%;
+    min-width:600px;
+    height: 550px;
+    display: block;
+    border-radius: 30px;
+    color:black;
     padding-top: 40px;
-    color:#1E3E6B !important;
+    box-shadow: 0 4px 4px 0 #CADFFD, 0 6px 20px 0 #CADFFD;
+
 }
