--- a/myapp/src/container/FeaturePages/Goals/Goals.module.css
+++ b/myapp/src/container/FeaturePages/Goals/Goals.module.css
@@ -12,7 +12,7 @@
 }
 .sectionOne{
     width: 100%;
-    height: 200px;  
+    height: 207px;  
     padding-top: 20px;
     padding-left: 200px;
     padding-right: 200px;
@@ -23,7 +23,7 @@
 }
 .titlediv{
     width: 100%;
-    min-width:515px;
+    min-width:440px;
 }
 .createGoalBtnDiv{
     display: flex;
@@ -32,14 +32,31 @@
 .createGoalBtn{
     background: #14d2ff ;
     color:white !important;
-    width: 60px;
-    height:20px;    
+    width: 68px;
+    height:27px;    
     border-radius: 8px !important;
     padding: 10px;   
     margin-top:138px;
+    margin-left:5px;
     
 }
 .createGoalBtn:hover{
+    background: white ;
+    color:#1479ff !important;
+    border: #1479ff solid 1px;
+}
+.completeBtn{
+    background: #14d2ff ;
+    color:white !important;
+    width: 140px;
+    height:47px;    
+    border-radius: 8px !important;
+    padding: 5px;   
+    margin-top:138px;
+    font-size: 15px;
+    border: none;
+}
+.completeBtn:hover{
     background: white ;
     color:#1479ff !important;
     border: #1479ff solid 1px;
@@ -140,44 +157,51 @@
 .editIconBtns {
     color: black !important;
     cursor: pointer;
-   width:26px;
-   height: 26px;
-   padding: 5px 5px 5px 5px;
-   margin-left: 10px;
+    width:26px;
+    height: 26px;
+    padding: 5px 5px 5px 5px;
+    margin-left: 10px;
 }
 .editIconBtns:hover {
-text-decoration: none;
-color: #1479FF !important;
+    text-decoration: none;
+    color: #1479FF !important;
 }
 
 .deleteIconBtns {
     color: black !important;
     cursor: pointer;
-   width:26px;
-   height: 26px;
-   padding: 5px 5px 5px 5px;
-   margin-left: 10px;
+    width:26px;
+    height: 26px;
+    padding: 5px 5px 5px 5px;
+    margin-left: 10px;
 }
 .deleteIconBtns:hover {
-text-decoration: none;
-color: red !important;
+    text-decoration: none;
+    color: red !important;
 }
 .tickIconBtns {
     color: grey !important;
     cursor: pointer;
-   width:60px;
-   height: 36px;
-   padding: 5px 5px 5px 5px;
+    width:60px;
+    height: 36px;
+    padding: 5px 5px 5px 5px;
 }
-.tickIconBtns2 {
+/* .tickIconBtns2 {
+   
     color: #2BD01D !important;
     cursor: pointer;
-   width:60px;
-   height: 36px;
-   padding: 5px 5px 5px 5px;
-}
-
-/* .tickIconBtns:hover {
-text-decoration: none;
-color: #fff;
+    width:60px;
+    height: 36px;
+    padding: 5px 5px 5px 5px;
 } */
+
+.tickIconBtns:hover {
+color: #2BD01D !important;
+} 
+.tickIconBtns_completed{
+    color: #2BD01D !important;
+    cursor: pointer;
+    width:60px;
+    height: 36px;
+    padding: 5px 5px 5px 5px;
+}
