--- a/myapp/src/hoc/Layout/Layout.module.css
+++ b/myapp/src/hoc/Layout/Layout.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    background-color: green;
 }
 .sideNavBar{
     width:105px; 
@@ -10,6 +11,7 @@
 .childrenDiv{
     width: calc(100% - 105px);;
     width: -moz-calc(100% - 110px);
-    
+    height: 100%;
+    background-color: purple;
    
 }
