--- a/myapp/src/container/FeaturePages/Dashboard/Activities/Activities.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/Activities/Activities.module.css
@@ -7,7 +7,7 @@
  .communityActivitiesText{
      background-color: #F7FBFF;
      width: 100%;
-     height: 40px;
+     height: 60px;
      margin-bottom: 10px;
      display: flex;
      font-size: 14px;
@@ -19,6 +19,7 @@
  .activitiesTextOnly{
     height: 25px;
     margin: auto;
+    text-align: left;
  }
  .activitiesName{
      
@@ -27,6 +28,12 @@
  .activitiesGoalHeading{
     color:#0077FF;
     font-weight: 900;
+ }
+ .dateTime{
+     width:60px;
+font-size: 10px;
+padding:20px 0px 0px 5px;
+color:gray !important;
  }
 
 
