--- a/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
@@ -3,24 +3,21 @@
     height: 100%;
     text-align: center;
     display: flex;   
-    background-color: pink;
-    /*background: #f3f8ff;
-    
-*/
+    background: #f3f8ff;
 }
 .sectionOne{
     width: 30%;
     height: 100%;
     display:flex;
     flex-direction: column;  
-    background-color: green;
+   
     
 }
 .sectionOne_subContent{
     width: 100%;
     height: 80%;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 55px;
     overflow:auto;
     
  }
@@ -28,16 +25,16 @@
     width: 70%;
     height: 100%;
     color:white;
-    /* background:#f3f8ff; */
+    background:#f3f8ff;
     padding:20px;
-    background-color: orange;
+   
 }
 .sectionTwo_subContent{
     width: 100%;
     display: flex;
     flex-flow: row;      
     justify-content: center;
-    margin: 30px 0 40px 0;
+    margin: 0px 0 40px 0;
     padding-top: 50px; 
  }
 .reports{
@@ -47,11 +44,16 @@
     height: 550px;
     display: block;
     border-radius: 30px;
-    color:black;
-    padding-top: 40px;
+    color:#1E3E6B !important;
+    padding-top: 10px;
     box-shadow: 0 4px 4px 0 #CADFFD, 0 6px 20px 0 #CADFFD;
 }
+.reportTitle{
+    color:#1E3E6B !important;
+    font-size: 30px !important;
 
+  
+}
 .rowChart{
     width: 100%;
     display: flex;
@@ -65,8 +67,9 @@
     height: 550px;
     display: block;
     border-radius: 30px;
-    color:black;
-    padding-top: 40px;
+    color:black !important;
+    padding-top: 10px;
     box-shadow: 0 4px 4px 0 #CADFFD, 0 6px 20px 0 #CADFFD;
+    overflow:auto;
 
 }
