--- a/myapp/src/container/SignUp/Signup.module.css
+++ b/myapp/src/container/SignUp/Signup.module.css
@@ -1,6 +1,5 @@
 .mainDiv{
     width:100%;
-    height: 100%;
     position: relative;
     text-align: center;
     display: flex;
@@ -15,29 +14,32 @@
     height: 100vh;
     background: white;
 }
+
 .signupTitle{
-    color:black;
-    margin-top: 70px;
+    color:#252525;
+    margin-top: 100px;
     padding-top:20px;
     font-size: 26px;
+    font-weight: 500;
 }
+
 .formDiv{
     width:80%;
     height: 30vh;
-    margin: auto;
+    margin: 50px auto 0 auto;
 }
 .inputDiv{
     width:100%;
-    height: 30px;
+    height: 38px;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px; 
+    font-size: 15px; 
     font-family: "Lato", sans-serif;
     padding: 0 0 0 12px;
     background: #f3f3f5;
     margin: 30px auto 0px auto;
     text-align: left;
-    border-radius: 4px;
+    border-radius: 5px;
     border: 1px solid #f3f3f5;
     box-sizing: border-box;
     outline: none;
@@ -48,15 +50,18 @@
     
 }
 .signupButton{
-    margin:20px 0px 10px 0px;
-    width: 100px;
+    margin:70px 0px 10px 0px;
+    width: 200px;
+    font-size: 22px;
     justify-content: center;
     text-align: center;
 }
+
 .signinText{
-    margin:0px;
+    margin:20px 0 0 0;
     text-align: center;
 }
+
 .signinButton{
     width:80px;
     font-size: 16px;
@@ -70,26 +75,30 @@
 .backButton{
     width:80px;
     font-size: 17px;
-    margin:auto;
+    margin: 10px auto 0 auto;
     padding: 2px;
     justify-content: center;
 }
+
 .backButton:hover{
     color:blue;
 }
+
 .invalidInput{
     border: 1px solid #C41337;
 }
 .validInput{
     border: 1px solid #00873F;
 }
+
 .usernameEror{
-    color: red;
+    color: #C41337;
     text-align: left;
-    font-size: 10px;
+    font-size: 11px;
     padding: 0px;
     margin: 0px;
 }
+
 .checkCircle{
     float: right;
     margin-right: 13px;
@@ -98,6 +107,7 @@
     color:#00873F;
     font-size: 14px;    
 }
+
 .exTrianle{
     float: right;
     margin-right: 13px;
