--- a/myapp/src/hoc/Layout/Layout.module.css
+++ b/myapp/src/hoc/Layout/Layout.module.css
@@ -2,16 +2,20 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background: pink;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .sideNavBar{
     width:105px; 
-    background: blueviolet;
-    
 }
 .childrenDiv{
+    width: 100%;
+    height: 100%; 
+    font-family: Arial, Helvetica, sans-serif; 
+}
+
+.childrenDivWithToolbar{
     width: calc(100% - 105px);
     width: -moz-calc(100% - 110px);
     height: 100%;  
-    background: orange !important; 
+    font-family: Arial, Helvetica, sans-serif;
 }
