--- a/myapp/src/container/FeaturePages/Dashboard/UserName/UserName.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/UserName/UserName.module.css
@@ -13,7 +13,6 @@
     color:black;
     font-size: 35px;
     font-weight: 800;
-  
 }
 
 .welcomeText{
@@ -24,6 +23,7 @@
 
 .leftSide{
     margin: 10px 0 0 20px;
+    text-align: left;
 }
 
 .image{
