--- a/myapp/src/container/FeaturePages/VisionBoard/ImagesList/ImagesList.module.css
+++ b/myapp/src/container/FeaturePages/VisionBoard/ImagesList/ImagesList.module.css
@@ -1,3 +1,9 @@
+@keyframes fadeIn{
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+
 .imagestitle{
     color:#1E3E6B !important;
     min-width:280px;
@@ -11,7 +17,7 @@
     width:100%;
     height: 100%;
     min-width: 410px;
-    background: grey;
+    background: #eff5fe;
 }
 .gridImages{
     min-width: 410px;
@@ -20,18 +26,32 @@
     display:flex;  
     flex-flow: row wrap;
     text-align: left;
-   
+   padding: 20px 0 0 20px;
+   margin: 0 auto 0 auto;
 }
+
+.imagesWrapper{
+    margin: 0 auto 0 auto;
+}
+
 .visionImages{
     width: 284px; 
     height:284px;
     margin: 5px 0px 0px 5px;
     border-radius: 5px;
     border: none;      
+    opacity: 0;
+    animation-name: fadeIn;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-delay: 500ms;
+    animation-fill-mode: forwards;
 }
+
 .visionImages:hover{  
    cursor: pointer;
    transform: scale(1.02);   
+   
    
 }
 .selectedVisionImages{
@@ -39,8 +59,7 @@
     height:284px;
     margin: 5px 0px 0px 5px;
     border-radius: 5px;
-    border: solid orange;
-   border-width: 2px;  
+    border: solid 8px #33A1FD;
 }
 .addImage{
     width: 284px;
@@ -56,7 +75,7 @@
 .addImageBtn{
     width:284px;
     height: 284px;
-    margin: 5px 0px 0px 5px;
+    margin: 5px auto 0px auto;
     color:grey;
     font-size:100px;   
     border-radius: 5px;
