--- a/myapp/src/container/FeaturePages/VisionBoard/VisionBoard.module.css
+++ b/myapp/src/container/FeaturePages/VisionBoard/VisionBoard.module.css
@@ -4,12 +4,15 @@
     text-align: center;
     display: flex;   
     background: grey;
+    
 }
 .imagesList{
     width:50%;     
+    background: #eff5fe;
 }
 .selectedImagesList{
     width:50%; 
-    
+    padding: 0 0 100px 0;
+    background-color:#1E3E6B !important;
 }
 
