--- a/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/Dashboard.module.css
@@ -51,7 +51,7 @@
 .reportTitle{
     color:#1E3E6B !important;
     font-size: 30px !important; 
-    margin-top: 5px;
+    margin: 10px 0 10px 0;
 }
 
 .rowChart{
