--- a/myapp/src/container/FeaturePages/Dashboard/RecentGoals/RecentGoals.module.css
+++ b/myapp/src/container/FeaturePages/Dashboard/RecentGoals/RecentGoals.module.css
@@ -8,6 +8,8 @@
     padding:0px 10px 0px 10px;
     margin-bottom: 10px;
     background-color: #f3f8ff;
+    border-radius: 4px;
+    border: #7CB4B8 dashed 1px;
 }
 
 .heading{
@@ -23,11 +25,11 @@
 .recentGoalsTitle{
     color:#1E3E6B !important;
     font-size: 30px !important;
-    margin: 5px 0 0 0;
+    margin: 10px 0 10px 0;
 }
 
 .dateTime{
-    width:60px;
+    width:70px;
     font-size: 10px;
     padding:20px 0px 0px 5px;
     color:gray !important;
