--- a/myapp/src/container/FeaturePages/Goals/AddGoal/AddGoal.module.css
+++ b/myapp/src/container/FeaturePages/Goals/AddGoal/AddGoal.module.css
@@ -23,7 +23,7 @@
     height: 100vh;
     color:white;
     background:#f3f8ff;;
-    
+    padding: 40px 40px 40px 40px;
 }
 .sectionOne_subContent{
    width: 100%;
@@ -44,22 +44,24 @@
 }
 .sectionTwo_subContent{
     width: 100%;    
-    height: 100%;     
+    height: 100%;  
+    max-height: 1000px;   
     display: block;
     justify-content: center;
-    padding-top: 30px; 
-    color:black
-
- }
- .reports{
+    color:#000;
+    margin: 30px 60px 0 0;
     background:#fff;
-    width:95%;
-    height: 80%;
     border-radius: 30px;
+    padding: 40px 40px 40px 40px;
+    overflow:auto;
+ }
+
+ .reports{
+    width:95%;
     color:black;
     display:flex;  
     flex-flow: row wrap;
-    overflow:scroll;
+
 }
  .formText{   
    color:black;
@@ -114,7 +116,7 @@
 .continueBtn{
     background: #1479ff ;
     color:white !important;
-    width: 120px;
+    width: 140px;
     height:38px;    
     border-radius: 4px;
     font-size: 15px;
