Logout and addGoal modal added

--- a/myapp/src/container/Navigation/Toolbar.module.css
+++ b/myapp/src/container/Navigation/Toolbar.module.css
@@ -52,6 +52,10 @@
     color: red;
     cursor: pointer;
 }
+.toolbarUserName{
+    font-size: 14px !important;
+    
+}
 .contentOneBtns {
     color: #1479FF;
     cursor: pointer;
